--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,18 @@
             "Bootsetrap\\Bootsetrapmd\\": "src/"
         }
     },
-    "require": {}
+  "require": {
+        "php": ">=5.6",
+        "illuminate/support": ">=5.4"
+    },
+        "extra": {
+      "laravel": {
+        "providers": [
+          "\\Ladumor\\LaravelPwa\\PWAServiceProvider"
+        ],
+        "aliases": {
+          "LaravelPwa": "Ladumor\\LaravelPwa\\LaravelPwa"
+        }
+      }
+    }
 }
