--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "email": "rizkifahrezi990@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Bootsetrap\\Bootsetrapmd\\": "src/"
