--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,5 @@
             "Bootsetrap\\Bootsetrapmd\\": "src/"
         }
     },
-    "require": {
-            "laravel/framework": "^9.0",
-        "laravel/legacy-factories": "^1.0",
-             "monolog/monolog": "1.0.*@beta",
-        "acme/foo": "@dev"
-    },
-    "prefer-stable": true
+    "require": {}
 }
