--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,7 @@
 {
     "name": "bootsetrap/bootsetrapmd",
-    "type": "library",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "rizki",
-            "email": "rizkifahrezi990@gmail.com"
-        }
-    ],
-    "minimum-stability": "dev",
-    "autoload": {
-        "psr-4": {
-            "Bootsetrap\\Bootsetrapmd\\": "src/"
-        }
-    },
- "require": {
-        "php": "^7.0",
-        "guzzlehttp/guzzle": "^6.2.1",
-        "guzzlehttp/psr7": "^1.4.1",
-        "guzzlehttp/promises": "~1.0",
-        "laravel/framework": "5.4.*",
-        "illuminate/support": "5.4.*",
-        "spatie/array-to-xml": "^2.5"
-    },
-    "autoload": {
-        "psr-4": {
-            "rpsimao\\InvoiceXpressAPI\\": "src/"
-        },
-        "files":[
-            "src/Helpers/invoicexpress-api.php"
-        ]
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^6.1",
-        "orchestra/testbench": "^3.4"
+    "description": "A short description of what your package does",
+    "require": {
+        "php": ">=7.4"
     }
 }
